[tool.poetry]
name = "snap_bringup"
version = "0.1.0"
description = "Scripts to startup and control the SNAP board for GReX"
authors = ["Kiran Shila <me@kiranshila.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
casperfpga = { git = "https://github.com/GReX-Telescope/casperfpga", branch = "py38-dev" }
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = { version = "^22.6.0", allow-prereleases = true }
setuptools = "*"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snap_bringup = "snap_bringup.main:main"
